#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package XtcInput
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-07-02
2013-01-21 Andy Salnikov
- bug fix in implementation of Shared file, assumed live data even 
  when file extension was not inprogress

Tag: V00-07-01
2013-01-17 Andy Salnikov
- implemented initial algorithm for header sorting in XtcStreamDgIter
- fixed all tests
- added new test for header sorting (test/XtcReadAheadTest.cpp)

Tag: V00-07-00
2013-01-16 Andy Salnikov
- preparing for datagram read-ahead and sorting, for now introduce
  new class DgHeader that will be used in read-ahead
- split XtcStreamDgIter into three classes: SharedFile, DgHeader and
  same XtcStreamDgIter. XtcStreamDgIter now returns DgHeader instead 
  of whole datagram. DgHeader reads datagram when requested. Both
  XtcStreamDgIter and DgHeader used SharedFile class for reading.
- maximum datagram size removed from interfaces (constructors), there 
  is one internal limit on datagram size (256MB) used for checking 
  against header corruption
- there are no changes in the order of datagrams yet, all results should
  be identical to what we had before

Tag: V00-06-06
2012-10-11 Andy Salnikov
- if live database contains no info about files then RunFileIterLive 
  throws exception instead of returning empty "EOF" histogram

Tag: V00-06-05
2012-07-29 Andy Salnikov
- if the queue is full and terminate is called on DgramReader thread
  it will hang forever trying to push one more datagram into a queue,
  fix by removing all datagrams first before adding EOD datagram

Tag: V00-06-04
2012-07-27 Andy Salnikov
- small fixes to doxygen comments

Tag: V00-06-03
2012-07-24 Andy Salnikov